<resources>
    <string name="app_name" translatable="false">ControllMoney</string>
    <string name="Enter">Enter</string>
    <string name="Registration">Registration</string>
    <string name="Enter_password">Enter password</string>
    <string name="Enter_email">Enter email</string>
    <string name="Enter_or_reg">Enter or registrate</string>
    <string name="Hello">Nice to see you</string>
    <string name="greeting">Make plans of your life</string>
    <string name="Start">Start</string>
    <string name="database" translatable="false">DataBase</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Acct">Acct</string>
    <string name="Family">Family</string>
    <string name="Accumulations">Accumulations</string>
    <string name="Buy">Buy</string>
    <string name="Salary">Salary</string>
    <string name="Done">Done</string>
    <string name="See">See</string>
    <string name="Delete">Delete</string>
    <string name="Category">Category</string>
    <string name="Sum">Sum</string>
    <string name="Save">Save</string>
    <string name="Enter_name">Enter the name</string>
    <string name="Choose_period">Choose the period of the plan:</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="Income">Income</string>
    <string name="Income_of_period">Your income for this period:</string>
    <string name="Next">Next</string>
    <string name="want_rewrite">Do you want to update data?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="Account">Account</string>
    <string name="Plan">Plan</string>
    <string name="Calendar">Calendar</string>
    <string name="History">History</string>
    <string name="Sms">Sms</string>
    <string name="explain_accum">When withdrawing, the money will be added to the general account.</string>
    <string name="Back">Back</string>
    <string name="Messages">Messages</string>
    <string name="tech_dif">In case of technical difficulties, please contact</string>
</resources>