<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/top_account_layout"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/style_grad"
        android:padding="30dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/style_back_reg">

            <ScrollView
                android:id="@+id/ScrollView_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fillViewport="true"
                android:padding="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Choose_period"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/rad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/year" />

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/month" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Income_of_period"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextNumberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/Income"
                        android:inputType="numberDecimal"
                        android:minHeight="48dp" />


                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:onClick="next"
                        android:text="@string/Next"
                        android:textAlignment="textEnd"
                        android:textSize="25sp" />
                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/want_rewrite"
                        android:textSize="20sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:onClick="yes"
                            android:text="@string/yes"
                            android:gravity="center"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:background="@drawable/shadow"/>
                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:onClick="no"
                            android:text="@string/no"
                            android:gravity="center"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:background="@drawable/shadow"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>




    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/top_account_layout"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="30sp"
        >

        <TextView
            android:id="@+id/account_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Выберите ваш план"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
