<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/relativeLayout4"
        android:padding="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_grad"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="58dp"
            android:background="@drawable/style_back_reg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutForFirstText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-5dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Enter_or_reg"
                    android:textAlignment="center"
                    android:textSize="30sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/style_buttons"
                android:drawableLeft="@drawable/ac"
                android:hint="@string/Enter_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/style_buttons"
                android:drawableLeft="@drawable/password"
                android:hint="@string/Enter_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

                <TextView
                    android:id="@+id/buttonReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shadow"
                    android:gravity="center"
                    android:onClick="reg"
                    android:text="@string/Registration"
                    app:layout_constraintTop_toBottomOf="parent" />

                <TextView
                    android:id="@+id/buttonEnter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shadow"
                    android:gravity="center"
                    android:onClick="enter"
                    android:text="@string/Enter"
                    app:layout_constraintTop_toBottomOf="parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/button_to_bd"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/shadow"
        android:gravity="center"
        android:onClick="toBd"
        android:text="@string/database"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>