<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Hello"
        android:paddingTop="20sp"
        />
    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:background="@drawable/style_buttons"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:text="@string/Email"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20sp"
        android:background="@drawable/style_grad"
        app:layout_constraintTop_toBottomOf="@+id/textViewUser">
        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/style_background"
                            android:drawableLeft="@drawable/baseline_account_box_24"
                            android:gravity="center"
                            android:text="@string/Account"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:onClick="onClick"/>

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:background="@drawable/style_background"
                            android:drawableLeft="@drawable/baseline_edit_note_24"
                            android:gravity="center"
                            android:text="@string/Plan"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:onClick="onClick"/>
                        <TextView
                            android:id="@+id/textView3"
                            android:layout_marginLeft="10dp"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:background="@drawable/style_background"
                            android:drawableLeft="@drawable/baseline_family_restroom_24"
                            android:gravity="center"
                            android:text="@string/Family"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:onClick="onClick"/>

                    </TableRow>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="110dp"
                            android:layout_height="120dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/style_background"
                            android:drawableLeft="@drawable/baseline_calendar_month_24"
                            android:gravity="center"
                            android:text="@string/Calendar"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:onClick="onClick"/>
                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="30dp"
                            android:background="@drawable/style_background"
                            android:drawableLeft="@drawable/baseline_attach_money_24"
                            android:layout_weight="1"                            android:gravity="center"
                            android:text="@string/Accumulations"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:onClick="onClick"/>
                    </TableRow>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@drawable/style_background"
                            android:drawableLeft="@drawable/baseline_history_24"
                            android:text="@string/History"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="10dp"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:onClick="onClick"/>
                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="30dp"
                            android:background="@drawable/style_background"
                            android:drawableLeft="@drawable/baseline_message_24"
                            android:text="@string/Sms"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:onClick="onClick"/>
                    </TableRow>
                </TableRow>

            </TableLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelAccum"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_grad"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/style_back_reg">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fillViewport="true"
                android:padding="20sp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewAc1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/explain_accum"
                        android:padding="10dp"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/textViewAc2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Accumulations"
                        android:padding="10dp"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/editTextNumberDecimalAc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/Accumulations"
                        android:inputType="numberDecimal"
                        android:minHeight="48dp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/textViewAc3"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:onClick="onClick"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_weight="1"
                            android:background="@drawable/baseline_add_circle_outline_24"/>
                        <TextView
                            android:id="@+id/textViewAc4"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:onClick="onClick"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_weight="1"
                            android:background="@drawable/baseline_remove_circle_outline_24"/>
                        <TextView
                            android:id="@+id/textViewAc5"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:onClick="onClick"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_weight="1"
                            android:background="@drawable/baseline_check_circle_outline_24"/>

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/RelHis"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_grad"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/style_back_reg">
            <ScrollView
                android:id="@+id/ScrollViewHis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fillViewport="true"
                android:padding="20sp">
                <LinearLayout
                    android:id="@+id/histiry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHis1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/textViewHis2"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:text="@string/Back"
                        android:layout_marginBottom="10dp"
                        android:textSize="20sp"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="100dp"
                        android:onClick="onClick"
                        android:background="@drawable/shadow"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>